<resources>
    <string name="pluto___your_plugins" translatable="false">Plugins</string>
    <string name="pluto___settings" translatable="false">Settings</string>
    <string name="pluto___about" translatable="false">About</string>
    <string name="pluto___choose_plugin" translatable="false">Pluto Plugins</string>
    <string name="pluto___dev_details" translatable="false">Developer Details</string>

    <string name="pluto___notification_title" translatable="false">Pluto is debugging %s</string>
    <string name="pluto___notification_subtitle" translatable="false">Tap here to view complete debug report</string>
    <string name="pluto___close" translatable="false">Close Pluto</string>
    <string name="pluto___no_options">no options available</string>
    <string name="pluto___plugin_details">Plugin Details</string>
    <string name="pluto___website_url_hint">your website url goes here</string>
    <string name="pluto___vcs_url_hint">your vcs url goes here</string>
    <string name="pluto___settings_easy_access_appearance_handed_title">Enable Right handed mode for Access popup</string>
    <string name="pluto___reset_all_requested">Plugin data reset requested</string>
    <string name="pluto___settings_easy_access_title">Enable Notch</string>
    <string name="pluto___easy_access_setup_description">Show a Notch over your application to access the library.</string>
    <string name="pluto___settings_reset_all_title">Reset all data</string>
    <string name="pluto___settings_reset_all_description">This is clear all the data and app state. Choose this if the library is stuck in an unexpected error.</string>
    <string name="pluto___reset">Reset</string>
    <string name="pluto___notch_settings_updated" translatable="false">Notch settings updated</string>
    <string name="pluto___overlay_consent_header" translatable="false">Enable Notch</string>
    <string name="pluto___overlay_consent_description" translatable="false">Enable Draw over other Apps settings to show the notch for easy access to library.</string>
    <string name="pluto___never_ask_again" translatable="false">Never ask again</string>
    <string name="pluto___enable_now" translatable="false">Enable Now</string>
    <string name="pluto___open_pluto" translatable="false">Open</string>
    <string name="pluto___notch_label" translatable="false">Pluto.</string>
    <string name="pluto___no_plugins" translatable="false">No Plugins installed yet.</string>
    <string name="pluto___plugin_details_name_hint" translatable="false">Plugin Name goes here</string>
    <string name="pluto___plugin_details_version_hint" translatable="false">plugin version goes here</string>
    <string name="pluto___plugin_details_website_hint" translatable="false">plugin website goes here</string>
    <string name="pluto___plugin_details_vcs_hint" translatable="false">plugin vcs link goes here</string>
    <string name="pluto___plugin_details_twitter_hint" translatable="false">plugin twitter link goes here</string>
    <string name="pluto___overlay_setting_for_tool" translatable="false">Need Draw over other apps to enable all the tools.</string>

    <string name="pluto___tools" translatable="false">Tools</string>
    <string name="pluto___tool_ruler_name" translatable="false">Ruler</string>
    <string name="pluto___tool_grid_name" translatable="false">Grid</string>
    <string name="pluto___tool_current_screen_name" translatable="false">Current Screen</string>
    <string name="pluto___tool_screen_history_name" translatable="false">Screen History</string>
    <string name="pluto___tool_ruler_hint_label" translatable="false">How to use</string>
    <string name="pluto___tool_ruler_hint_reset_position" translatable="false">Click on the screen to set start position.</string>
    <string name="pluto___tool_ruler_hint_measure" translatable="false">Drag your finger to measure the distance.</string>
    <string name="pluto___tool_ruler_hint_scale_gap">Scales are %d dp apart.</string>
    <string name="pluto___settings_theme_title">Enable Dark theme</string>
    <string name="pluto___settings_theme_description">Choose Pluto theme to control color schema.</string>
    <string name="pluto___setting_theme_updated">Pluto theme updated</string>
    <string name="pluto___settings_grid_size_title">Modify Grid dimensions</string>
    <string name="pluto___settings_grid_size_description">Manage the size of grid blocks of Ruler, GridView &amp; other layout plugins.</string>
    <string name="pluto___new_version_available_text">New version v%s available</string>
</resources>