<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pluto___transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pluto___margin_medium"
        android:background="@color/pluto___white"
        app:cardCornerRadius="@dimen/pluto___margin_xsmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/pluto___section_color"
                android:drawableStart="@drawable/pluto___ic_easy_access"
                android:drawableLeft="@drawable/pluto___ic_easy_access"
                android:drawablePadding="@dimen/pluto___margin_xsmall"
                android:gravity="center_vertical"
                android:fontFamily="@font/muli_semibold"
                android:paddingHorizontal="@dimen/pluto___margin_medium"
                android:paddingVertical="@dimen/pluto___margin_small"
                android:text="@string/pluto___overlay_consent_header"
                android:textColor="@color/pluto___text_dark_80"
                android:textSize="@dimen/pluto___text_xmedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/pluto___margin_medium"
                android:layout_marginTop="@dimen/pluto___margin_medium"
                android:layout_marginEnd="@dimen/pluto___margin_medium"
                android:fontFamily="@font/muli"
                android:text="@string/pluto___overlay_consent_description"
                android:textColor="@color/pluto___text_dark_60"
                android:textSize="@dimen/pluto___text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"
                app:layout_constraintWidth_percent="0.8" />

            <TextView
                android:id="@+id/cta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pluto___margin_xsmall"
                android:layout_marginBottom="@dimen/pluto___margin_mini"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:ellipsize="end"
                android:fontFamily="@font/muli_bold"
                android:paddingHorizontal="@dimen/pluto___margin_micro"
                android:paddingVertical="@dimen/pluto___margin_small"
                android:text="@string/pluto___enable_now"
                android:textColor="@color/pluto___blue"
                android:textSize="@dimen/pluto___text_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pluto___margin_xsmall"
                android:layout_marginEnd="@dimen/pluto___margin_medium"
                android:layout_marginBottom="@dimen/pluto___margin_mini"
                android:ellipsize="end"
                android:fontFamily="@font/muli_semibold"
                android:paddingHorizontal="@dimen/pluto___margin_micro"
                android:paddingVertical="@dimen/pluto___margin_small"
                android:text="@string/pluto___never_ask_again"
                android:textColor="@color/pluto___text_dark_60"
                android:textSize="@dimen/pluto___text_small"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@+id/title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>