<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/pluto___margin_small">

    <com.pluto.ui.RoundedFrameLayout
        android:id="@+id/plugins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pluto___margin_small"
        android:clickable="true"
        android:elevation="@dimen/pluto___margin_medium"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/tools"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rfl_corner_radius="@dimen/pluto___margin_xsmall">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pluto___dark_60"
            android:paddingTop="@dimen/pluto___margin_xlarge">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/pluto___margin_small"
                android:minHeight="200dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/noPluginView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/pluto___margin_mini"
                android:ellipsize="end"
                android:fontFamily="@font/muli_light"
                android:gravity="center"
                android:maxLines="2"
                android:paddingHorizontal="@dimen/pluto___margin_xsmall"
                android:text="@string/pluto___no_plugins"
                android:textColor="@color/pluto___white_40"
                android:textSize="@dimen/pluto___text_small"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/list"
                app:layout_constraintEnd_toEndOf="@+id/list"
                app:layout_constraintStart_toStartOf="@+id/list"
                app:layout_constraintTop_toTopOf="@+id/list"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.pluto.ui.RoundedFrameLayout>

    <com.pluto.ui.RoundedFrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pluto___margin_small"
        android:clickable="true"
        android:elevation="@dimen/pluto___margin_medium"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/plugins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/plugins"
        app:rfl_corner_radius="@dimen/pluto___margin_medium">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ebebeb">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pluto___margin_xxlarge"
                android:fontFamily="@font/muli_bold"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/pluto___margin_xlarge"
                android:text="@string/pluto___choose_plugin"
                android:textColor="@color/pluto___dark"
                android:textSize="@dimen/pluto___text_xsmall"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.pluto.ui.RoundedFrameLayout>

    <com.pluto.ui.RoundedFrameLayout
        android:id="@+id/tools"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pluto___margin_xsmall"
        android:clickable="true"
        android:elevation="@dimen/pluto___margin_medium"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rfl_corner_radius="@dimen/pluto___margin_xsmall">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pluto___dark_60">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/toolsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/pluto___margin_small"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/overlaySetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ebebeb"
                android:drawableEnd="@drawable/pluto___ic_chevron_right"
                android:drawableRight="@drawable/pluto___ic_chevron_right"
                android:ellipsize="end"
                android:fontFamily="@font/muli_semibold"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:padding="@dimen/pluto___margin_small"
                android:singleLine="true"
                android:text="@string/pluto___overlay_setting_for_tool"
                android:textColor="@color/pluto___dark_80"
                android:textSize="@dimen/pluto___text_xsmall"
                app:layout_constraintTop_toBottomOf="@+id/toolsList" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.pluto.ui.RoundedFrameLayout>

    <com.pluto.ui.RoundedFrameLayout
        android:id="@+id/bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:elevation="@dimen/pluto___margin_medium"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rfl_corner_radius="@dimen/pluto___margin_xsmall">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pluto___dark_60">

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/pluto___margin_medium"
                android:layout_marginStart="@dimen/pluto___margin_xsmall"
                android:layout_marginBottom="@dimen/pluto___margin_medium"
                android:fontFamily="@font/muli"
                android:gravity="center"
                android:paddingHorizontal="@dimen/pluto___margin_xsmall"
                android:textColor="@color/pluto___white_80"
                android:textSize="@dimen/pluto___text_small"
                app:layout_constraintBottom_toTopOf="@+id/mavenVersion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="version" />

            <TextView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/pluto___margin_xsmall"
                android:drawableStart="@drawable/pluto___ic_settings"
                android:drawableLeft="@drawable/pluto___ic_settings"
                android:drawablePadding="@dimen/pluto___margin_mini"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:paddingHorizontal="@dimen/pluto___margin_xsmall"
                android:text="@string/pluto___settings"
                android:textColor="@color/pluto___white_80"
                android:textSize="@dimen/pluto___text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/version" />

            <TextView
                android:id="@+id/mavenVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFC107"
                android:visibility="gone"
                android:drawableEnd="@drawable/pluto___ic_chevron_right"
                android:drawableRight="@drawable/pluto___ic_chevron_right"
                android:ellipsize="end"
                android:fontFamily="@font/muli_bold"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:padding="@dimen/pluto___margin_small"
                android:singleLine="true"
                android:text="@string/pluto___new_version_available_text"
                android:textColor="@color/pluto___dark_80"
                android:textSize="@dimen/pluto___text_small"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.pluto.ui.RoundedFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>